[package]
name = "market-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.9"
core_affinity = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
market-maker-rs = "0.3.0"
rust_decimal_macros = "1.39.0"
rust_decimal = "1.39.0"
rustc-hash = { version = "2.1" }
